# sanic_vite

./: .gitignore  README.md  jsconfig.json  package.json  pyproject.toml  rename.sh  setup.py  vite.config.js
changeme/: cli.py  defaults.py  init_script.py  redis.py  server.py  shortcuts.py  utils.py
changeme/commands/: common.py  manager.py  services.py
changeme/conf/: __init__.py  global_settings.py  jtemplates.py  utils.py
changeme/conf/templates/: gitignore
changeme/db/: alembic.ini  nosync.py  pagination.py  sync.py  utils.py  web.py
changeme/db/migrations/: env.py
changeme/db/migrations/versions/: 0000_init.py
changeme/errors/: __init__.py
changeme/html_render/: render.py  static.py  vite.py
changeme/managers/: users_mg.py
changeme/pages/: example_bp.py
changeme/security/: __init__.py  auth_bp.py  authentication.py  base.py  decorators.py  password.py  scopes.py  utils.py  web.py
changeme/services/: example_bp.py
changeme/types/: config.py  html.py  security.py  user.py
scripts/: es512.sh  revision.sh
templates/: _layout.html
templates/example/: index.html
tests/: test_auth.py
