[tool.poetry]
name = "changeme"
version = "0.1.0"
description = ""
authors = ["nuxion <nuxion@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
sanic = {extras = ["ext"], version = "^22.3.0"}
Jinja2 = "^3.1.1"
click = "^8.1.2"
rich = "^12.1.0"
pydantic = "^1.9.0"

[tool.poetry.scripts]
sbuilder = "changeme.cli:cli"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
