[tool.poetry]
name = "changeme"
version = "0.1.0"
description = ""
authors = ["nuxion <nuxion@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
sanic = {extras = ["ext"], version = "^22.3.0"}
Jinja2 = "^3.1.1"
click = "^8.1.2"
rich = "^12.1.0"
pydantic = "^1.9.0"
PyJWT = {extras = ["crypto"], version = "^2.3.0"}
SQLAlchemy = {extras = ["asyncpg"], version = "^1.4.35"}
alembic = "^1.7.7"
asyncpg = "^0.25.0"
aiosqlite = "^0.17.0"
aioredis = {extras = ["hiredis"], version = "^2.0.1"}

[tool.poetry.scripts]
sbuilder = "changeme.cli:cli"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
sqlalchemy-stubs = "^0.4"
pylint = "^2.13.5"
isort = "^5.10.1"
autopep8 = "^1.6.0"
types-redis = "^4.1.19"
types-ujson = "^4.2.1"
pytest-asyncio = "^0.18.3"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
